fixed z-index on dataset page

--- a/app/scripts/components/loca-tool/date-range-select/style.scss
+++ b/app/scripts/components/loca-tool/date-range-select/style.scss
@@ -17,6 +17,8 @@
   border: 0;
   border-radius: 0;
 
+  z-index: 3;
+
   &:last-of-type {
     position: relative;
     left: -2px;
